Fix:Title overflow

--- a/src/app/todo/todo-manager/todo-manager.component.css
+++ b/src/app/todo/todo-manager/todo-manager.component.css
@@ -7,4 +7,5 @@
 }
 .todo-module-header{
   overflow: hidden;
+  width:100%;
 }
